# sfml-test

./: CMakeLists.txt  main.cpp
resources/: config.txt
